# davidayo-sec-scan-test

./: .dockerignore  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci-sim.yml  ci.yml  deploy.yml  release-cli.yml  security-pr-rejection-reusable.yml  security-scan-reusable.yml  tests.yml
.phrase-platform/: phrase-launchpad.yaml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_two_channel.py  0003_admin_model_control.py  0004_slack_webhook.py  0005_bypass_slack_mode.py  0006_okta_identity.py  0007_ci_scan_records.py  0008_scanner_settings.py  0009_consolidation_verifier.py  0010_partial_scan_and_retry.py  0011_quality_gate.py  0012_report_retention.py  0013_ci_scan_html_report.py  0014_encrypt_report_columns.py  0015_app_groups.py  0016_user_role_audit_events.py
demo/: VAmPI-scan-report.md
deploy/chart/: Chart.yaml  values-ingress.yaml  values.yaml
deploy/chart/templates/: deployment.yaml  httproute.yaml  networkpolicy.yaml  pluginconfig.yaml
eslint_security/: .eslintrc.security.json
examples/: dev-repo-security-scan.yml  two-jurisdictions.md
scripts/: local_scan_test.sh  open_fix_pr.sh  run_gate.sh  scan-local.sh  smoke_test.sh
scripts/lib/: safe_apply.py
semgrep_configs/: auth.yaml  go.yaml  injection.yaml  java.yaml  owasp-top-ten.yaml  path-traversal.yaml  php.yaml  secrets.yaml  security-audit.yaml  ssrf.yaml  upload-security.yaml
src/: security-scan-report.md
src/security_scanner/: main.py  pipeline.py
src/security_scanner/agent/: api.py  auth.py  cicd_output.py  gate_decision.py  local_scan.py  oidc.py  slack_alert.py  test_endpoint.py
src/security_scanner/observability/: metrics.py
src/security_scanner/shared/: config.py  logging_util.py
src/security_scanner/shared/claude/: client.py
src/security_scanner/shared/context/: __init__.py  callee_finder.py  caller_finder.py  high_risk_paths.yaml  middleware_extractors.py  models.py  ownership_checks.py  packager.py  route_extractors.py  upload_context.py  upload_finder.py  upload_models.py
src/security_scanner/shared/filters/: file_filter.py  post_filter.py
src/security_scanner/shared/github/: client.py
src/security_scanner/shared/llm/: __init__.py  base.py  factory.py  gemini_client.py  parsing.py  usage.py
src/security_scanner/shared/models/: enums.py  finding.py  scan_result.py
src/security_scanner/shared/prompts/: system.py
src/security_scanner/shared/reports/: html.py  markdown.py  patch.py  vuln_names.py
src/security_scanner/shared/scanners/: __init__.py  consensus.py  merge.py  models.py  normalize.py  registry.py  subprocess_runner.py  types.py  workdir.py
src/security_scanner/shared/secrets/: stripper.py
src/security_scanner/shared/severity/: mapping.py
src/security_scanner/shared/tokens/: counter.py
src/security_scanner/shared/validation/: schema.py
src/security_scanner/shared/verification/: consolidation.py  parallel.py  prompts.py  quality_gate.py  secrets.py  vulns.py
src/security_scanner/skill/: SKILL.md  api.py  auth.py  local_cli.py  local_files.py  oauth.py  responses.py
src/security_scanner/tokens/: __init__.py  admin_panel.py  audit.py  auth.py  crypto.py  db.py  models.py  okta.py  portal.py  registry.py
src/security_scanner/tokens/templates/: admin_advanced_settings.html  admin_audit.html  admin_base.html  admin_ci_token.html  admin_config_ci_token.html  admin_config_gate.html  admin_config_maintenance.html  admin_config_org.html  admin_config_scanner.html  admin_configuration.html  admin_dashboard.html  admin_group_detail.html  admin_groups.html  admin_org_settings.html  admin_reports.html  admin_tokens.html  admin_usage.html  admin_users.html  base.html  portal_change_password.html  portal_cli_consent.html  portal_dashboard.html  portal_index.html  portal_login.html  (+8 more)
tests/: conftest.py  test_main.py  test_pipeline.py  test_scaffold.py
tests/acceptance/: test_acceptance.py
tests/agent/: test_admin_model_control.py  test_api.py  test_bypass.py  test_cicd_output.py  test_gate_decision.py  test_local_scan.py  test_local_scan_registry_auth.py  test_oidc.py  test_pr_event.py  test_slack_alert.py  test_test_endpoint.py
tests/fixtures/: vuln_comprehensive.py
tests/integration/: test_concurrent_scans.py  test_dvpwa_corpus.py  test_minimum_findings.py  test_truthset_corpus.py
tests/observability/: test_scanner_metrics.py
tests/shared/: test_config.py  test_logging_util.py  test_models.py
tests/shared/claude/: test_client.py
tests/shared/context/: test_callee_finder.py  test_caller_finder.py  test_middleware_extractors.py  test_ownership_checks.py  test_packager_integration.py  test_route_extractors.py  test_upload_context.py  test_upload_finder.py
tests/shared/filters/: test_file_filter.py  test_post_filter.py
tests/shared/github/: test_client.py
tests/shared/llm/: test_factory.py  test_parsing.py  test_provider_clients.py
tests/shared/prompts/: test_system.py
tests/shared/reports/: test_html.py  test_markdown.py  test_patch.py  test_safe_apply.py  test_vuln_names.py
tests/shared/scanners/: test_bandit.py  test_consensus.py  test_gosec.py  test_merge.py  test_normalize.py  test_registry.py  test_run_layer1.py  test_semgrep.py  test_subprocess_runner.py  test_upload_rules.py  test_upload_synth.py  test_workdir_safety.py
tests/shared/secrets/: test_stripper.py
tests/shared/severity/: test_mapping.py
tests/shared/tokens/: test_counter.py
tests/shared/validation/: test_schema.py
tests/shared/verification/: test_advisory_lane.py  test_authz_rubric.py  test_parallel.py  test_risk_routing.py  test_secrets.py  test_upload_verifier.py  test_vulns_verifier.py
tests/skill/: test_api.py  test_local_cli.py  test_local_cli_remote.py  test_oauth.py  test_responses.py
tests/tokens/: conftest.py  test_admin_panel.py  test_crypto.py  test_domain_restriction.py  test_jit_provisioning.py  test_okta.py  test_password_reset.py  test_portal.py  test_reactivation_reauth.py  test_registry.py  test_two_channel.py
(+25 files in other folders)
