[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-scanner"
version = "0.1.0"
description = "Phrase Security Vulnerability Scanner — AI-powered source code scanning for Launchpad services"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "anthropic>=0.34",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "detect-secrets>=1.4",
  "pyjwt[crypto]>=2.8",
  "prometheus-client>=0.20",
]

[project.scripts]
phrase-sec-scan = "security_scanner.skill.local_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "bandit>=1.7",
]
# Optional non-default LLM providers (Appendix D-15 — DEVIATION, sim-only).
# Not in core deps: the spec mandates Anthropic (already a core dep); these
# are only needed when SCANNER_LLM_PROVIDER selects them. The Docker image
# installs ".[providers]" so the running simulation can switch providers.
providers = [
  "google-genai>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=security_scanner",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/security_scanner"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
