[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-scanner"
version = "0.1.0"
description = "Phrase Security Vulnerability Scanner — AI-powered source code scanning for Launchpad services"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.27",
  "anthropic>=0.34",
  "bcrypt>=4.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "detect-secrets>=1.4",
  "pyjwt[crypto]>=2.10.1",
  "prometheus-client>=0.20",
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.18",
  "certifi>=2024.7.4",
  "pathspec>=0.12",
  "pyyaml>=6.0",
  "cryptography>=46.0.6",
]

[project.scripts]
phrase-sec-scan = "security_scanner.skill.local_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "aiosqlite>=0.20",
  "ruff>=0.4",
  "bandit>=1.7",
]
# Optional non-default LLM providers (Appendix D-15 — DEVIATION, sim-only).
# Not in core deps: the spec mandates Anthropic (already a core dep); these
# are only needed when SCANNER_LLM_PROVIDER selects them. The Docker image
# installs ".[providers]" so the running simulation can switch providers.
providers = [
  "google-genai>=0.3",
]
# Multi-scanner Layer-1 Python tool dependencies.
# Install with: pip install .[scanners]
# gosec and ESLint are installed separately (see Dockerfile).
scanners = [
  "semgrep>=1.80",
  "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

# Jinja templates ship with the wheel so they resolve under
# Path(__file__).parent / "templates" inside the container too.
[tool.setuptools.package-data]
"security_scanner.tokens" = ["templates/*.html"]
"security_scanner.shared.reports" = ["assets/*.png"]
"security_scanner.shared.context" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=security_scanner",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/security_scanner"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E501"]
# Long lines in prompt files are inside triple-quoted strings; noqa directives
# inside string literals are not processed by ruff.
"src/security_scanner/shared/prompts/system.py" = ["E501"]
"src/security_scanner/shared/verification/prompts.py" = ["E501"]
# Intentionally vulnerable fixtures used as truth-set test data — formatting
# changes would obscure the deliberate security defects being tested.
"tests/fixtures/vuln_comprehensive.py" = ["UP031", "UP030", "S608"]
"tests/integration/truthset/**/*.py" = ["UP031", "UP030", "F841", "S608", "S106"]
